# Eplace-3D-TDP

./: 3D_Bin_Node_Density_Implementation.md  3D_Density_Gradient_Implementation.md  3D_Final_Implementation_Report.md  3D_Wirelength_Implementation.md  CMakeLists.txt  LayeredGP_README.md  aes_cipher_top.hgr  aes_cipher_top.hgr.part.2  ePlace  eplace_run.sh  eplace_sta.tcl  eplace_sta_report.rpt  main3D  sta_iter0.def  sta_iter105.def  sta_iter120.def  sta_iter135.def  sta_iter15.def  sta_iter150.def  sta_iter165.def  sta_iter30.def  sta_iter45.def  sta_iter60.def  sta_iter75.def  sta_iter90.def  test_sta.tcl
ASAP7/LEF/: asapHBT.lef
ASAP7/LIB/: asapHBT.lib
EPlace/: CMakeLists.txt  eplace.h  eplace_3d.cpp  test_2d_to_3d.cpp  test_3d_basic.cpp  test_3d_density.cpp  test_3d_integration.cpp  test_3d_integration_simple.cpp
FFT/: fft.cpp  fft.h  fftsg3d.cpp
Legalization/: ePlaceAbacus.cpp
OpenroadInterface/: interface.h  interface3D.cpp
Optimization/: nesterov.hpp
Parser/: parser.cpp
PlaceCommon/: global.h  objects.cpp  objects.h
PlaceDB/: placedb.cpp  placedb.h
Plot/: plot.cpp  plot.h
QPlace/: CMakeLists.txt
aes_cipher_top/: aes_cipher_top-eGP.pl
after_buffered/: aes_cipher_top_buf.def
main/: ePlace_main.cpp
